tests/baselines/reference/parserErrorRecovery_ParameterList6.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList6.ts(2,23): error TS1110: Type expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList6.ts(2,28): error TS1003: Identifier expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList6.ts(3,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList6.ts (3 errors) ====
    class Foo {
        public banana (x: break) { }
                          ~~~~~
!!! error TS1110: Type expected.
                               ~
!!! error TS1003: Identifier expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.